Allow sorting by different columns

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@
 # Source of info > http://gobiernoabierto.valencia.es/en/data/
 # DataSet: Monumentos_falleros (JSON format)
 dataset.url= http://mapas.valencia.es/lanzadera/opendata/Monumentos_falleros/JSON
+
+# filter options [all, section, section_i]. The lists will show the results aphabetically
+dataset.filter=all
