--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,9 @@
 dataset.url= http://mapas.valencia.es/lanzadera/opendata/Monumentos_falleros/JSON
 
 # filter options [all, section, section_i]. The lists will show the results aphabetically
-dataset.filter=all
+dataset.filter=section_i
+
+# Spark properties
+spark.templatePath = /templates/
+spark.publicPath = /public/
+spark.templateFileName = result.ftl
