Changed to Fallas Freemarker template

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ dataset.filter=section_i
 # Spark properties
 spark.templatePath = /templates/
 spark.publicPath = /public/
-spark.templateFileName = result.ftl
+spark.templateFileName = fallas.ftl
